--- a/Autobot/Base.lproj/Main.storyboard
+++ b/Autobot/Base.lproj/Main.storyboard
@@ -21,6 +21,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="UserLoginIcon" translatesAutoresizingMaskIntoConstraints="NO" id="weQ-kD-iOf">
+                                <rect key="frame" x="127" y="97" width="160" height="160"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="THs-dF-2o0">
                                 <rect key="frame" x="20" y="286" width="374" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -64,10 +68,6 @@
                                     <segue destination="TeZ-1q-uHS" kind="presentation" id="Uzk-eV-uBE"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="UserLoginIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="weQ-kD-iOf">
-                                <rect key="frame" x="127" y="97" width="160" height="160"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.001564681064" green="0.059898532929999998" blue="0.16380020980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -494,7 +494,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="UserLoginIcon.png" width="760" height="760"/>
+        <image name="UserLoginIcon" width="253" height="253"/>
         <image name="deviceIcon" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
